--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
    
         <button class="hero-item" id="hero-btn">sign up</button>
     </div>
-        <div class="img-placeholder"><p>image placeholder</p></div>
+        <div class="img-placeholder"><img src="images/p1.svg" alt="some image" width="500" height="250"></div>
       </div>
       <div class="info">
         <!-- some boxes -->
-        <h2 class="info-header">Some random information</h2>
+        <h2 id="info-header">Some random information.</h2>
         <div class="info-container">
           <div class="info-box">
             <div class="idk"></div>
@@ -61,20 +61,23 @@
         </div>
       </div>
       <!-- inspiring quote -->
-      <div class="inspiring">
-        <h2 class="inspiring-header">
+      <div class="quote">
+        <p class="quote-p">
           This is an inspiring quote, or a testimonial from a customer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
-          knows? All I know is that it looks just fine. — Someone You Trust
-        </h2>
+          knows? All I know is that it looks just fine.
+        </p>
+        <b> — BUNNYLOTION</b>
       </div>
-      <div class="signup">
-        <h1>Call to action! It's time!</h1>
-        <div>
+      <div class="signup-container">
+        <h1 class="action">Call to action! It's time!</h1>
+        <div class="signup">
+        <div class="sig-p">
           <p>
             Sign up for our product by clicking that button right over there!
           </p>
           <button id="signup-btn">sign up</button>
+        </div>
         </div>
       </div>
     </main>
