--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <div class="info">
         <!-- some boxes -->
-        <h2 id="info-header">Some random information.</h2>
+        <h2 id="info-header">Some random Pics.</h2>
         <div class="info-container">
           <div class="info-box">
             <div class="idk">
