--- a/index.html
+++ b/index.html
@@ -59,13 +59,17 @@
         <div class="info-container">
           <div class="info-box">
             <div class="idk">
-              <img src="images/giphy1.gif" alt="animeshit" width="150"  height="150" />
+              <img
+                src="images/giphy1.gif"
+                alt="animeshit"
+                width="150"
+                height="150"
+              />
             </div>
             <p class="info-text">
               this is suposed to be some text about anime but I'm too lazy
             </p>
           </div>
-          
 
           <div class="info-box">
             <div class="idk">
